Update hero area
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -152,11 +152,11 @@
                 <div class="navbar-item pr-0">
                   <div class="buttons">
                     <a href="{{.Site.Params.domain_accounts}}/user/login"
-                      class="button ac-button is-secondary is-uppercase">
+                      class="button ac-button is-primary is-uppercase">
                       Sign in
                     </a>
                     <a href="{{.Site.Params.domain_accounts}}/user/sign_up"
-                      class="button ac-button is-primary is-uppercase ml-0">
+                      class="button ac-button is-secondary is-uppercase ml-0">
                       Sign up
                     </a>
                   </div>
@@ -407,6 +407,7 @@
 
   <!--owl carousel  -->
   <script src="/assets/js/owl.carousel.min.js"></script>
+  <script src="/assets/js/headroom.min.js"></script>
   <!--Search  -->
   <script src="/assets/js/search.js"></script>
   <!-- Main JS -->
