--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -5,7 +5,7 @@
 {{- $pages := $pctx.RegularPages -}}
 
 <!--============================== hero area 2022 start  ==============================-->
-<section class="hero-area-blog pt-100" style="background-image: url(/assets/images/bg-image/hero-bg.png);">
+<section class="hero-area-blog" style="background-image: url(/assets/images/bg-image/hero-bg.png);">
   <div class="container">
     <div class="slider-wrapper" >
       {{ range $idx, $p := $pages.ByDate.Reverse | first 1 }}
@@ -19,37 +19,29 @@
                   href="{{ $p.RelPermalink }}">{{ $p.Title }}</a></h1>
               <!-- title  -->
 
-              <!-- meta description  -->
-              <div class="meta" data-aos="fade-up" data-aos-duration="600">
-
-                <div class="author">By
-                  {{ range $author := first 1 $p.Params.authors }}
-                  <a href="/authors/{{ $author | urlize }}">{{ $author }}</a>
-                  {{end}}
-
-                  {{ range $author := after 1 $p.Params.authors }}
-                  <span>&amp;</span><a href="/authors/{{ $author | urlize }}">{{ $author }}</a>
-                  {{ end }}
-                </div>
-
-
-                <div class="date"><i class="fa fa-calendar-check-o" aria-hidden="true"></i> <strong>
-                    {{ $p.Date.Format "2-Jan-2006" }}</strong>
-                </div>
-              </div>
-              <!-- meta description  -->
-
               <!-- summary  -->
-              <p class="is-ellipsis-3" data-aos="fade-up" data-aos-duration="700">{{ $p.Summary }}</p>
+              <p class="is-ellipsis-2" data-aos="fade-up" data-aos-duration="700">{{ $p.Summary }}</p>
 
-              <a class="inline-button" href="{{ $p.RelPermalink }}" data-aos="fade-up" data-aos-duration="800">READ MORE
-                <i class="fa fa-arrow-right"></i></a>
+              <a class="button ac-button is-secondary" href="{{ $p.RelPermalink }}" data-aos="fade-up"
+                data-aos-duration="800">CONTINUE READING</a>
               <!-- summary  -->
             </div>
           </div>
 
           <div class="column is-4">
-            <div class="author">Author</div>
+            <!-- author start  -->
+            <div class="author">
+              {{ range $author := first 1 $p.Params.authors }}
+              <a class="author-image"><img src="https://cdn.appscode.com/images/employees/masud.jpg"
+                  alt="author-image"></a>
+              <div class="information">
+                <h5><a href="/authors/{{ $author | urlize }}">{{ $author }}</a></h5>
+                <p class="designation">Senior Software Engineer</p>
+                <a href="appscode.com" class="company">AppsCode Inc</a>
+              </div>
+              {{end}}
+            </div>
+            <!-- author end -->
           </div>
         </div>
       </div>
