--- a/static/assets/sass/base/utilities/_typography.scss
+++ b/static/assets/sass/base/utilities/_typography.scss
@@ -1,6 +1,8 @@
 // Typography
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700&display=swap');
+
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap");
 
 $ac-font-heading: "Roboto", sans-serif;
